# bounding-box-maker

./: pyproject.toml
src/: __init__.py
