[tool.poetry]
name = "bounding-box-maker"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
